<resources>
    <string name="app_name">BookStore</string>

    <string name="book_list_title">도서 목록</string>
    <string name="dummy_book_title">도서 제목</string>

    <string name="book1_title">쉽게 배우는 알고리즘</string>
    <string name="book1_author">문병로</string>

    <string name="book2_title">난생처음 MySQL</string>
    <string name="book2_author">박연희</string>

    <string name="book3_title">쉽게 배우는 PHP 웹 프로그래밍</string>
    <string name="book3_author">송미영</string>

    <string name="book4_title">미라클 HTML5+CSS3+자바스크립트</string>
    <string name="book4_author">조성호</string>

    <string name="book5_title">AI 시대의 프로그래머</string>
    <string name="book5_author">톰 타오울리</string>

    <string name="book6_title">린 AI</string>
    <string name="book6_author">에릭 리스</string>

    <string name="detail_toolbar_title">도서 상세 정보</string>
    <string name="label_author">저자 : </string>
    <string name="label_price">가격 : </string>
    <string name="label_date">출판일 : </string>
    <string name="dummy_date">2026년 1월 1일</string>
    <string name="unit_won">원</string>
    <string name="btn_related_books">연관 도서 보기</string>
    <string name="btn_add_cart">장바구니 담기</string>

    <string name="menu_search">검색</string>
    <string name="menu_settings">설정 및 계정 관리</string>
    <string name="toast_search_clicked">검색 기능 준비 중입니다.</string>
    <string name="toast_settings_clicked">설정 화면으로 이동합니다.</string>

    <string name="toast_under_construction">준비 중입니다.</string>

    <string name="menu_cs">고객센터</string>
    <string name="menu_login">로그인</string>

    <string name="hint_id">아이디를 입력하세요</string>
    <string name="hint_pwd">비밀번호를 입력하세요</string>
    <string name="toast_login_success">환영합니다!</string>

    <string name="btn_share">공유하기</string>
    <string name="toast_link_copied">링크가 복사되었습니다.</string>

    <string name="toast_no_recent_book">최근 본 도서가 없습니다.</string>

</resources>